--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 					<section>
 						<h1>Steg 2: Oppgrader alt som oppgraderes kan</h1>
 						<div class="fragment fade-in">I Maven bruker du : <a href="https://www.mojohaus.org/versions-maven-plugin/index.html" target="_blank">Versions Maven Plugin</a> </div>
-						<div class="fragment fade-in">Github tilbyr <a href="https://help.github.com/en/github/managing-security-vulnerabilities/configuring-automated-security-updates" target="_blank">automatisk sikkerhetsoppgradering</a></div>
-						<div class="fragment fade-in">Gitlab jobber med <a href="https://gitlab.com/groups/gitlab-org/-/epics/759" target="_blank">automatisk sikkerhetsoppgradering</a></div>
+						<div class="fragment fade-in">Github tilbyr <a href="https://help.github.com/en/github/managing-security-vulnerabilities/configuring-automated-security-updates" target="_blank">automated security updates</a></div>
+						<div class="fragment fade-in">Gitlab tilbyr <a href="https://docs.gitlab.com/ee/user/application_security/dependency_scanning/index.html" target="_blank">dependency scanning</a> i sin gold/ultimate versjon</div>
 						<div class="fragment fade-in">
 							Eksempel: <a href="https://github.com/aberner/presentasjon_s-rbarhetsvurdering/network/alerts" target="_blank">sårbarhet i denne presentasjonen</a>
 						</div>
